--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,6 +1,6 @@
  		<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">降雨量</a>
+    <a class="navbar-brand" href="#">球球</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" href="#">首頁</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">降雨查詢</a>
+          <a class="nav-link" href="#">財管系</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
