--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,6 +1,6 @@
  		<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">球球</a>
+    <a class="navbar-brand" href="#">月降雨量統計</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,11 +10,11 @@
           <a class="nav-link active" aria-current="page" href="#">首頁</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">財管系</a>
+          <a class="nav-link" href="#">查詢</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            我的練習
+            關於
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Action</a></li>
