--- a/datacenter/templates/index.html
+++ b/datacenter/templates/index.html
@@ -1,24 +1,22 @@
 {% extends "base.html" %}
 {% block title %}首頁{% endblock %}
-{% block headmessage %} <h1>歡迎光臨{{ myname }}的網站</h1>{% endblock %}
+{% block headmessage %} <h1>近五年全台各地月降雨量統計</h1>{% endblock %}
 {% block content %}
-<h3>以下是本網站預測下期的大樂透號碼</h3>
+<h3>以下是台灣各縣市之降雨量查詢</h3>
 <table class='table table-striped table-bordered'>
-	<tr><td>特別號:{{ special_number }}</td><td colspan=5>超神準預測，總有一天會中</td></tr>
-	<tr>
-		{% for no in lotto_numbers %}
-		<td>
-			{{ no }}
-		</td>
-		{% endfor %}
-	</tr>
+	<tr><td>各縣市</td><td>台灣地圖</td></tr>
+	<tr><td>北部</td></tr>
+	<tr><td>中部</td></tr>
+	<tr><td>南部</td></tr>
+	<tr><td>東部</td></tr>
+	<tr><td>離島</td></tr>
 </table>
 <br>
+<h4>近期有關下雨的新聞</h4>
 <table class='table table-striped table-bordered'>
-	<tr><td>編號</td><td>標題</td><td>張貼日期</td></tr>
+	<tr><td>標題</td><td>張貼日期</td></tr>
 {% for post in posts %}
 	<tr>
-		<td>{{ post.id }}</td>
 		<td><a href="/show/{{post.id}}/">{{ post.title }}</a></td>
 		<td>{{ post.pub_date }}</td>
 	</tr>
