--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,4 +1,5 @@
- 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+ 		<nav class="navbar navbar-dark bg-dark">
+  <!-- Navbar content -->
   <div class="container-fluid">
     <a class="navbar-brand" href="#">月降雨量統計</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
