--- a/datacenter/templates/index.html
+++ b/datacenter/templates/index.html
@@ -5,13 +5,54 @@
 <h3>以下是台灣各縣市之降雨量查詢</h3>
 <table class='table table-striped table-bordered'>
 	<tr><td>各縣市</td><td>台灣地圖</td></tr>
-	<tr><td>北部</td></tr>
-	<tr><td>中部</td></tr>
-	<tr><td>南部</td></tr>
-	<tr><td>東部</td></tr>
-	<tr><td>離島</td></tr>
+	<tr><td>北部</td><td rowspan="5">
+		<img src="https://lh4.googleusercontent.com/uOaDgDNia0_cDAuA6l21S6OAMpovOmsEz4k82v0e3Q8UbpOntNmpevdgpCZFWNLLZbJGglwuz_ussMSKq6CBLXL5TvMIgQZtoixzomprrwceI_Z9Q-g0VPbEsMVYLnQjVw=w1280" width="500" height="600" usemap="#ImageMap02">
+<map name="ImageMap02">
+
+<area shape="circle" coords="300,180,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="台中">
+
+<area shape="circle" coords="360,105,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="新竹">
+
+<area shape="circle" coords="320,140,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="苗栗">
+
+<area shape="circle" coords="370,65,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="桃園">
+
+<area shape="circle" coords="430,75,16"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="新北">
+
+<area shape="circle" coords="410,35,10"  href="https://fhy.wra.gov.tw/fhy/Alert/Query"  title="台北">
+
+<area shape="circle" coords="450,30,10"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="基隆">
+
+<area shape="circle" coords="425,120,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="宜蘭">
+
+<area shape="circle" coords="390,270,22"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="花蓮">
+
+<area shape="circle" coords="310,260,22"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="南投">
+
+<area shape="circle" coords="220,235,18"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="彰化">
+
+<area shape="circle" coords="210,280,18"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="雲林">
+
+<area shape="circle" coords="75,300,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="澎湖">
+
+<area shape="circle" coords="240,320,18"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="嘉義">
+
+<area shape="circle" coords="190,375,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="台南">
+
+<area shape="circle" coords="250,400,18"  href="https://fhy.wra.gov.tw/fhy/Alert/Query"  title="高雄">
+
+<area shape="circle" coords="320,422,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="台東">
+
+<area shape="circle" coords="250,500,20"  href="https://www.google.com/search?q=%E5%A4%96%E6%B5%B7&rlz=1C1CHZN_zh-TWTW945TW945&oq=%E5%A4%96%E6%B5%B7&aqs=chrome..69i57j0l9.1735j0j1&sourceid=chrome&ie=UTF-8"  title="屏東">
+
+</map>
+	<tr><td>中部</td>
+	<tr><td>南部</td>
+	<tr><td>東部</td>
+	<tr><td>離島</td>
 </table>
 <br>
+
 <h4>近期有關下雨的新聞</h4>
 <table class='table table-striped table-bordered'>
 	<tr><td>標題</td><td>張貼日期</td></tr>
