--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,5 +1,6 @@
- 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid", style="background-color:#FFC9FF;">
     <a class="navbar-brand" href="#">月降雨量統計</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,7 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" 
-        aria-label="Search">
+         aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
