--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,6 +1,6 @@
- 		<nav class="navbar navbar-dark bg-dark">
+ 		<nav class="navbar navbar-expand-lg navbar-light be-light">
   <!-- Navbar content -->
-  <div class="container-fluid">
+  <div class="container-fluid", style="background-color:#FFC9FF;"> 
     <a class="navbar-brand" href="#">月降雨量統計</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
