--- a/datacenter/templates/index.html
+++ b/datacenter/templates/index.html
@@ -1,10 +1,12 @@
+<span style="font-family:DFKai-sb,monospace;border:1px orange solid;margin-right:5px;">
 {% extends "base.html" %}
 {% block title %}首頁{% endblock %}
 {% block headmessage %} <h1>近五年全台各地月降雨量統計</h1>{% endblock %}
 {% block content %}
+<body style="background-color:#FFF2FF;">
 <h3>以下是台灣各縣市之降雨量查詢</h3>
 <table class='table table-striped table-bordered'>
-	<tr><td>各縣市</td><td>台灣地圖</td></tr>
+<tr style="background-color:#FFC9FF"><td>各縣市</td><td>台灣地圖</td></tr>
 	<tr><td>北部</td><td rowspan="5">
 		<img src="https://lh4.googleusercontent.com/uOaDgDNia0_cDAuA6l21S6OAMpovOmsEz4k82v0e3Q8UbpOntNmpevdgpCZFWNLLZbJGglwuz_ussMSKq6CBLXL5TvMIgQZtoixzomprrwceI_Z9Q-g0VPbEsMVYLnQjVw=w1280" width="500" height="600" usemap="#ImageMap02">
 <map name="ImageMap02">
@@ -54,13 +56,15 @@
 <br>
 
 <h4>近期有關下雨的新聞</h4>
-<table class='table table-striped table-bordered'>
+<table class='table table-striped table-bordered', style="background-color:#FFC9FF;">>
 	<tr><td>標題</td><td>張貼日期</td></tr>
 {% for post in posts %}
-	<tr>
+	<tr style="background-color:#FFF2FF">
 		<td><a href="/show/{{post.id}}/">{{ post.title }}</a></td>
 		<td>{{ post.pub_date }}</td>
 	</tr>
 {% endfor %}
 </table>
 {% endblock %}
+</body>
+</span>
