--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,7 +1,7 @@
  		<nav class="navbar navbar-expand-lg navbar-light be-light">
   <!-- Navbar content -->
   <div class="container-fluid", style="background-color:#FFC9FF;"> 
-    <a class="navbar-brand" href="#">月降雨量統計</a>
+    <a class="navbar-brand"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,29 +10,20 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">首頁</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">查詢</a>
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">關於我們</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            關於
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-            <li><a class="dropdown-item" href="#">More..</a></li>
-          </ul>
+         <li class="nav-item">
+          <a class="nav-link active" href="https://fhy.wra.gov.tw/fhy/Monitor/Reservoir" tabindex="-1">水利署水情查詢</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/" tabindex="-1">管理後臺</a>
+          <a class="nav-link active" href="/admin/" tabindex="-1">管理後臺</a>
         </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" 
         aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="button"  class="btn btn-light" type="submit">Search</button>
       </form>
     </div>
   </div>
