折線圖已完成

--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -1,27 +1,17 @@
-<<<<<<< HEAD
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid", style="background-color:#FFC9FF;">
-=======
  		<nav class="navbar navbar-expand-lg navbar-light be-light">
   <!-- Navbar content -->
   <div class="container-fluid", style="background-color:#FFC9FF;"> 
-<<<<<<< HEAD
     <a class="navbar-brand"></a>
-=======
->>>>>>> d52adfc1fc5411fac044d8b1787d6d4476e30dae
-    <a class="navbar-brand" href="#">月降雨量統計</a>
->>>>>>> 9e572669dc9a6bfcd7e043fb92aa0ba663e308d8
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">首頁</a>
+          <a class="nav-link active" aria-current="page" href="/#">首頁</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">關於我們</a>
+          <a class="nav-link active" aria-current="page" href="/about_us/">關於我們</a>
         </li>
          <li class="nav-item">
           <a class="nav-link active" href="https://fhy.wra.gov.tw/fhy/Monitor/Reservoir" tabindex="-1">水利署水情查詢</a>
@@ -32,13 +22,8 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" 
-<<<<<<< HEAD
         aria-label="Search">
         <button class="button"  class="btn btn-light" type="submit">Search</button>
-=======
-         aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
->>>>>>> 9e572669dc9a6bfcd7e043fb92aa0ba663e308d8
       </form>
     </div>
   </div>
