--- a/datacenter/templates/index.html
+++ b/datacenter/templates/index.html
@@ -4,68 +4,48 @@
 {% block headmessage %} <h1>第七組提供</h1>{% endblock %}
 {% block content %}
 <body style="background-color:#FFF2FF;">
-<<<<<<< HEAD
 <h4>以下是台灣近五年各地月降雨量查詢</h4>
 <table class='table table-striped table-bordered text-center'>
 <tr style="background-color:#FFC9FF"><td>台灣地圖(點擊區域可查詢)
 	<tr><td rowspan="5">
-		<img src="https://lh5.googleusercontent.com/-oymXvOxSemy0w4Rsk3osnq9yHyPh1NcaMjTsYLujXRKw8c3UtgnoIB14Ft0KfLlJuROYwnINR_Rl4GLKyQH8_LCJdjE9nyvE0a49THZPduUudDVSevzmYIuxAjcF9QPWg=w1280" width="500" height="600" usemap="#ImageMap02">
-=======
-<h3>以下是台灣各縣市之降雨量查詢</h3>
-<table class='table table-striped table-bordered'>
-<<<<<<< HEAD
-	<tr style="background-color:#FFC9FF"><td>各縣市</td><td>台灣地圖</td></tr>
-	<tr><td>北部</td></tr>
-	<tr><td>中部</td></tr>
-	<tr><td>南部</td></tr>
-	<tr><td>東部</td></tr>
-	<tr><td>離島</td></tr>
-</table>
-<br>
-<h4>近期有關水情的新聞</h4>
-<table class='table table-striped table-bordered', style="background-color:#FFC9FF;">
-=======
-<tr style="background-color:#FFC9FF"><td>各縣市</td><td>台灣地圖</td></tr>
-	<tr><td>北部</td><td rowspan="5">
-		<img src="https://lh4.googleusercontent.com/uOaDgDNia0_cDAuA6l21S6OAMpovOmsEz4k82v0e3Q8UbpOntNmpevdgpCZFWNLLZbJGglwuz_ussMSKq6CBLXL5TvMIgQZtoixzomprrwceI_Z9Q-g0VPbEsMVYLnQjVw=w1280" width="500" height="600" usemap="#ImageMap02">
->>>>>>> 9e572669dc9a6bfcd7e043fb92aa0ba663e308d8
+		<img src="https://lh4.googleusercontent.com/QTcnKJB8EXa9iCC5zaNE8_g0ecb61vkoS3wZyv6YQmTRL5lN-GKnr3JTmR7ARsma52hbfrzSeFp_BOcj8YWaGOhNnrXxg00EgYXsWURTrk383QZ8PrUkwLONOpDOqYmc3Q=w1280" width="500" height="600" usemap="#ImageMap02">
 <map name="ImageMap02">
 
-<area shape="circle" coords="300,180,20"  href="/local_weather/4/"  title="台中">
+<area shape="circle" coords="300,180,20"  href="/local_weather/7/"  title="台中">
 
-<area shape="circle" coords="360,105,20"  href="/local_weather/7/"  title="新竹">
+<area shape="circle" coords="360,105,20"  href="/local_weather/1/"  title="新竹">
 
-<area shape="circle" coords="320,140,20"  href="/show/8/"  title="苗栗">
+<area shape="circle" coords="320,140,20"  href="/local_weather/18/"  title="苗栗">
 
-<area shape="circle" coords="370,65,20"  href="/show/9/"  title="桃園">
+<area shape="circle" coords="370,65,20" href="/local_weather/15/"  title="桃園">
 
-<area shape="circle" coords="430,75,16"  href="/show/10/"  title="新北">
+<area shape="circle" coords="430,75,16"  href="/local_weather/29/"  title="新北">
 
-<area shape="circle" coords="410,35,10"  href="/show/11/"  title="台北">
+<area shape="circle" coords="410,35,10"  href="/local_weather/21/"  title="台北">
 
-<area shape="circle" coords="450,30,10"  href="/show/12/"  title="基隆">
+<area shape="circle" coords="450,30,10"  href="/local_weather/16/"  title="基隆">
 
-<area shape="circle" coords="425,120,20"  href="/show/13/"  title="宜蘭">
+<area shape="circle" coords="425,120,20"  href="/local_weather/13/"  title="宜蘭">
 
-<area shape="circle" coords="390,270,22"  href="/show/14/"  title="花蓮">
+<area shape="circle" coords="390,270,22"  href="/local_weather/11/"  title="花蓮">
 
-<area shape="circle" coords="310,260,22"  href="/show/15/"  title="南投">
+<area shape="circle" coords="310,260,22"  href="/local_weather/15/"  title="南投">
 
-<area shape="circle" coords="220,235,18"  href="/show/16/"  title="彰化">
+<area shape="circle" coords="220,235,18"  href="/local_weather/6/"  title="彰化">
 
-<area shape="circle" coords="210,280,18"  href="/show/17/"  title="雲林">
+<area shape="circle" coords="210,280,18"  href="/local_weather/9/"  title="雲林">
 
-<area shape="circle" coords="75,300,20"  href="/show/18/"  title="澎湖">
+<area shape="circle" coords="75,300,20"  href="/local_weather/27/"  title="澎湖">
 
-<area shape="circle" coords="240,320,18"  href="/show/19/"  title="嘉義">
+<area shape="circle" coords="240,320,18"  href="/local_weather/24/"  title="嘉義">
 
-<area shape="circle" coords="190,375,20"  href="/show/20/"  title="台南">
+<area shape="circle" coords="190,375,20"  href="/local_weather/28/"  title="台南">
 
-<area shape="circle" coords="250,400,18"  href="/show/21/"  title="高雄">
+<area shape="circle" coords="250,400,18"  href="/local_weather/19/"  title="高雄">
 
-<area shape="circle" coords="320,422,20"  href="/show/22/"  title="台東">
+<area shape="circle" coords="320,422,20"  href="/local_weather/17/"  title="台東">
 
-<area shape="circle" coords="250,500,20"  href="/show/23/"  title="屏東">
+<area shape="circle" coords="250,500,20"  href="/local_weather/10/"  title="屏東">
 
 </map>
 	
@@ -74,7 +54,6 @@
 
 <h4>近期有關下雨的新聞</h4>
 <table class='table table-striped table-bordered', style="background-color:#FFC9FF;">>
->>>>>>> d52adfc1fc5411fac044d8b1787d6d4476e30dae
 	<tr><td>標題</td><td>張貼日期</td></tr>
 {% for post in posts %}
 	<tr style="background-color:#FFF2FF">
