--- a/datacenter/templates/weather.html
+++ b/datacenter/templates/weather.html
@@ -1,20 +1,55 @@
-weather.html
-{% extends "base.html" %}
+{% extends "weather_base.html" %}
 {% block title %}消息內容頁面{% endblock %}
-{% block headmessage %} <h1>顯示消息內容</h1>{% endblock %}
+{% block headmessage %} <h1>此地區降雨量概況</h1>{% endblock %}
 {% block content %}
-<table class='table table-striped table-bordered'>
-	<tr>
-		<td>地點</td>
-		<td>{{}}</td>
-	</tr>
-	<tr>
-		<td>時間</td>
-		<td>{{}}</td>
-	</tr>
-	<tr>
-		<td>降雨量</td>
-		<td>{{}}</td>
-	</tr>
-</table>
+    <table class='table table-striped table-bordered'>
+        <tr style="background-color:#B54FFF">
+            <td>地點</td>
+            <td>{{ local_weather.local }}</td>
+        </tr>
+        <tr style="background-color:#E000E0">
+            <td>時間</td>
+            <td>{{ local_weather.time }}</td>
+        </tr>
+        <tr style="background-color:#FF6EFF">
+            <td>降雨量</td>
+            <td>{{ local_weather.rainfall }}</td>
+        </tr>
+    </table>
+    <table class='table table-striped table-bordered'>
+        <tr style="background-color:#FF30FF">
+            <th>1月</th>
+            <th>2月</th>
+            <th>3月</th>
+            <th>4月</th>
+            <th>5月</th>
+            <th>6月</th>
+            <th>7月</th>
+            <th>8月</th>
+            <th>9月</th>
+            <th>10月</th>
+            <th>11月</th>
+            <th>12月</th>
+        </tr>
+        <tbody>
+        {% for a in a_all %}
+            <tr style="background-color:#FF8CFF">
+                <td>{{ a.January }}</td>
+                <td>{{ a.February }}</td>
+                <td>{{ a.March }}</td>
+                <td>{{ a.April }}</td>
+                <td>{{ a.May }}</td>
+                <td>{{ a.June }}</td>
+                <td>{{ a.July }}</td>
+                <td>{{ a.August }}</td>
+                <td>{{ a.September }}</td>
+                <td>{{ a.October }}</td>
+                <td>{{ a.November }}</td>
+                <td>{{ a.December }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
+</body>
+</html>
