--- a/datacenter/templates/index.html
+++ b/datacenter/templates/index.html
@@ -8,7 +8,7 @@
 <table class='table table-striped table-bordered text-center'>
 <tr style="background-color:#FFC9FF"><td>台灣地圖(點擊區域可查詢)
 	<tr><td rowspan="5">
-		<img src="https://lh4.googleusercontent.com/QTcnKJB8EXa9iCC5zaNE8_g0ecb61vkoS3wZyv6YQmTRL5lN-GKnr3JTmR7ARsma52hbfrzSeFp_BOcj8YWaGOhNnrXxg00EgYXsWURTrk383QZ8PrUkwLONOpDOqYmc3Q=w1280" width="500" height="600" usemap="#ImageMap02">
+		<img src="https://i.imgur.com/1e0paJm.png" width="500" height="600" usemap="#ImageMap02">
 <map name="ImageMap02">
 
 <area shape="circle" coords="300,180,20"  href="/local_weather/7/"  title="台中">
