--- a/datacenter/templates/about_us.html
+++ b/datacenter/templates/about_us.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% block title %}消息內容頁面{% endblock %}
-{% block headmessage %} <h1>顯示消息內容</h1>{% endblock %}
+{% block headmessage %} <h1>以下是我們這組的介紹</h1>{% endblock %}
 {% block content %}
 <table class='table table-striped table-bordered'>
 	<tr style="background-color:#FFC9FF">
-		<td>標題</td>
-	</tr>
-	<tr>
-		<td>張貼日期</td>
+		
+		<td>日期</td><td>20210615</td>
 	</tr>
 	<tr>
 		<td>內容</td>
+		<td>
+		目前的地球正面臨著全球暖化的問題，台灣更是如此，隨著人類肆意破壞環境之下 天氣開始乾旱、缺水，大部分供水依靠颱風以及梅雨的台灣更是如此，每次降雨的時間都在改變，缺水的議題也慢慢浮上檯面，所以我們需要在問題到來前就提前想辦法。此議題也促使我們製作分析降雨量網頁來評估是否需要提早減量供水。
+	</td>
 	</tr>
 </table>
 {% endblock %}
