--- a/datacenter/templates/header.html
+++ b/datacenter/templates/header.html
@@ -5,7 +5,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/#">首頁</a>
@@ -17,14 +17,10 @@
           <a class="nav-link active" href="https://fhy.wra.gov.tw/fhy/Monitor/Reservoir" tabindex="-1">水利署水情查詢</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/admin/" tabindex="-1">管理後臺</a>
+          <a class="nav-link active" href="/admin/" tabindex="-1">工作人員專區</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" 
-        aria-label="Search">
-        <button class="button"  class="btn btn-light" type="submit">Search</button>
-      </form>
+
     </div>
   </div>
 </nav>
