--- a/datacenter/templates/showpost.html
+++ b/datacenter/templates/showpost.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}消息內容頁面{% endblock %}
+{% block title %}台灣水情相關報導{% endblock %}
 {% block headmessage %} <h1>以下是關於台灣水情相關報導</h1>{% endblock %}
 {% block content %}
 <table class='table table-striped table-bordered'>
