--- a/datacenter/templates/weather.html
+++ b/datacenter/templates/weather.html
@@ -1,5 +1,5 @@
 {% extends "weather_base.html" %}
-{% block title %}消息內容頁面{% endblock %}
+{% block title %}降雨量概況{% endblock %}
 {% block headmessage %} <h1>此地區降雨量概況</h1>{% endblock %}
 {% block content %}
     <table class='table table-striped table-bordered'>
