--- a/datacenter/templates/about_us.html
+++ b/datacenter/templates/about_us.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}消息內容頁面{% endblock %}
+{% block title %}關於我們{% endblock %}
 {% block headmessage %} <h1>以下是我們這組的介紹</h1>{% endblock %}
 {% block content %}
 <table class='table table-striped table-bordered'>
